--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.3.1",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-scripts": "3.1.2",
+    "react": "^16.10.1",
+    "react-app": "^1.1.2",
+    "react-dom": "^16.10.1",
+    "react-scripts": "^3.1.2",
     "reactstrap": "^8.0.1"
   },
   "scripts": {
