--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "prop-types": "^15.7.2",
     "react": "^16.10.1",
     "react-app": "^1.1.2",
     "react-dom": "^16.10.1",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.1.2",
+    "reactjs-popup": "^1.5.0",
     "reactstrap": "^8.0.1"
   },
   "scripts": {
