--- a/backend/package.json
+++ b/backend/package.json
@@ -10,16 +10,21 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/storage": "^4.0.1",
     "body-parser": "^1.19.0",
     "crypto": "^1.0.1",
+    "date-fns": "^2.6.0",
     "express-jwt": "^5.3.1",
     "express-session": "^1.17.0",
+    "firebase": "^7.2.3",
+    "firebase-admin": "^8.7.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.3.2",
     "mongoose": "^5.7.3",
     "multer": "^1.4.2",
     "nodemon": "^1.19.3",
     "passport": "^0.4.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "react-datepicker": "^2.9.6"
   }
 }
