--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
+    "date-fns": "^2.6.0",
     "jsonwebtoken": "^8.5.1",
     "package.json": "^2.0.1",
     "prop-types": "^15.7.2",
