--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.10.1",
     "react-app": "^1.1.2",
+    "react-datepicker": "^2.9.6",
     "react-dom": "^16.10.1",
     "react-redux": "^7.1.1",
     "react-router": "^5.1.2",
