--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "nodemon": "^1.19.3",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "react-datepicker": "^2.9.6"
+    "react-datepicker": "^2.9.6",
+    "uuid": "^3.3.3"
   }
 }
