--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
     "package.json": "^2.0.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "react-datepicker": "^2.9.6"
+    "react-datepicker": "^2.9.6",
+    "uuid": "^3.3.3"
   }
 }
